--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,21 @@
     "name": "francescomalatesta/wolframalphaphp",
     "description": "A PHP Wrapper for Wolfram|Alpha APIs (v2).",
     "version": "1.0.0",
-    "homepage": "https://github.com/francescomalatesta/wolframalphaphp",
+    "homepage": "https://github.com/andreacivita/wolframalphaphp",
     "license": "MIT",
 
-    "authors": [{
+    "authors": [
+	{
+        "name": "Andrea Civita",
+        "email": "andreacivita994@gmail.com",
+        "homepage": "https://andreacivita.it",
+        "role": "Developer & Mantainer"
+    },
+	{
         "name": "Francesco Malatesta",
         "email": "francescomalatesta@live.it",
         "homepage": "http://www.hellofrancesco.com",
-        "role": "Developer"
+        "role": "Original Author"
     }],
 
     "autoload": {
@@ -17,8 +24,11 @@
             "WolframAlpha\\": "src/"
         }
     },
-
     "require": {
-        "php": ">=5.3.0"
-    }
+        "php": "^7.3.0",
+        "illuminate/collections": "^8.20"
+    },
+	"require-dev" : {
+		"phpunit/phpunit": "^7"
+	}
 }
