--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,6 @@
     "version": "1.0.0",
     "homepage": "https://github.com/andreacivita/wolframalphaphp",
     "license": "MIT",
-
     "authors": [
 	{
         "name": "Andrea Civita",
@@ -29,6 +28,8 @@
         "illuminate/collections": "^8.20"
     },
 	"require-dev" : {
-		"phpunit/phpunit": "^7"
+		"phpunit/phpunit": "^7",
+        "friendsofphp/php-cs-fixer": "^2.17",
+        "brainmaestro/composer-git-hooks": "^2.8"
 	}
 }
